--- a/docs/style/main.less
+++ b/docs/style/main.less
@@ -27,6 +27,7 @@ body {
 @import "component/transfer-popup.less";
 @import "component/portfolio-item.less";
 @import "component/supernova-event-item.less";
+@import "component/governance-item.less";
 
 // views
 @import "view/layout.less";
@@ -34,6 +35,8 @@ body {
 @import "view/checkholder.less";
 @import "view/team.less";
 @import "view/partners.less";
+@import "view/governance.less";
+@import "view/governance-detail.less";
 
 /** Genesis */
 @import "view/landing-genesis.less";
