--- a/docs/style/component/governance-item.less
+++ b/docs/style/component/governance-item.less
@@ -43,12 +43,20 @@
             font-weight: 300;
             width      : 200px;
             text-align : left;
+
+            @media @phone {
+                display: none;
+            }
         }
 
         >.endTime {
             font-size   : 14px;
             font-weight : 300;
             margin-right: 8px;
+
+            @media @phone {
+                display: none;
+            }
         }
     }
 
