--- a/docs/style/view/governance-detail.less
+++ b/docs/style/view/governance-detail.less
@@ -86,6 +86,11 @@
         }
     }
 
+    >canvas {
+        margin-top: 8px;
+        max-height: 250px;
+    }
+
     >.creator {
         margin-top: 8px;
         font-size : 14px;
