feat: stableDAO portfolio2

--- a/docs/bundle.css
+++ b/docs/bundle.css
@@ -948,6 +948,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 120px;
 }
 .portfolio-item > .title > h2 {
   font-family: trajan-pro-3, serif;
@@ -962,7 +963,7 @@ body {
   display: flex;
   flex-direction: column;
   height: 100%;
-  margin: 0px 32px;
+  margin: 0px 16px;
   text-align: left;
 }
 @media only screen and (max-width: 719px) {
