--- a/docs/style/component/portfolio-item.less
+++ b/docs/style/component/portfolio-item.less
@@ -19,6 +19,7 @@
         flex-direction : column;
         justify-content: center;
         align-items    : center;
+        width          : 120px;
 
         >h2 {
             font-family: trajan-pro-3, serif;
@@ -36,7 +37,7 @@
         display       : flex;
         flex-direction: column;
         height        : 100%;
-        margin        : 0px 32px;
+        margin        : 0px 16px;
         text-align    : left;
 
         @media @phone {
