feat: lazy gourmet club partners

--- a/docs/bundle.css
+++ b/docs/bundle.css
@@ -1446,6 +1446,12 @@ body {
   padding: 0px;
   margin: 16px 0px;
 }
+.partners-view > section > a > .lazygourmet {
+  width: 512px;
+  height: 512px;
+  padding: 0px;
+  margin: 16px 0px;
+}
 .partners-view > section > a > .spoon {
   width: 322px;
   height: 172px;
