--- a/docs/style/view/partners.less
+++ b/docs/style/view/partners.less
@@ -50,6 +50,13 @@
                 margin : 16px 0px;
             }
 
+            >.lazygourmet {
+                width  : 512px;
+                height : 512px;
+                padding: 0px;
+                margin : 16px 0px;
+            }
+
             >.spoon {
                 width  : 322px;
                 height : 172px;
