--- a/docs/style/view/landing-genesis.less
+++ b/docs/style/view/landing-genesis.less
@@ -133,6 +133,7 @@
             margin-right    : 8px;
             background-color: rgba(224, 216, 200, 1);
             color           : black;
+            text-decoration : none;
 
             >img {
                 height: 48px;
