--- a/docs/style/view/landing-supernova.less
+++ b/docs/style/view/landing-supernova.less
@@ -158,6 +158,7 @@
             background-color: rgba(153, 0, 19, 1);
             border-radius   : 4px;
             color           : white;
+            text-decoration : none;
 
             &:hover {
                 background-color: rgba(153, 0, 19, 0.9);
