--- a/docs/bundle.css
+++ b/docs/bundle.css
@@ -2572,7 +2572,6 @@ body {
   background-color: rgba(0, 68, 90, 0.7);
   border-radius: 8px;
   padding: 8px 16px;
-  margin: 8px 0px;
 }
 .stable-dao-view > .warning-container > p {
   font-weight: 300;
@@ -2582,7 +2581,7 @@ body {
   display: block;
   font-size: 14px;
   font-weight: 400;
-  margin-bottom: 8px;
+  margin: 8px 0;
 }
 .stable-dao-view > .warning-container > a:hover {
   font-weight: 500;
