--- a/docs/style/view/stable-dao.less
+++ b/docs/style/view/stable-dao.less
@@ -17,7 +17,6 @@
         background-color: rgba(0, 68, 90, 0.7);
         border-radius   : 8px;
         padding         : 8px 16px;
-        margin          : 8px 0px;
 
         >p {
             font-weight: 300;
@@ -25,10 +24,10 @@
         }
 
         >a {
-            display      : block;
-            font-size    : 14px;
-            font-weight  : 400;
-            margin-bottom: 8px;
+            display    : block;
+            font-size  : 14px;
+            font-weight: 400;
+            margin     : 8px 0;
 
             &:hover {
                 font-weight: 500;
