--- a/docs/style/component/portfolio-item.less
+++ b/docs/style/component/portfolio-item.less
@@ -62,6 +62,10 @@
             margin-top : 16px;
             font-weight: 300;
         }
+
+        >.ended-price {
+            font-weight: bold;
+        }
     }
 
     >button {
