--- a/docs/style/component/shared/connectwalletpopup.less
+++ b/docs/style/component/shared/connectwalletpopup.less
@@ -4,7 +4,7 @@
     width           : 90%;
     margin          : auto;
     border-radius   : 4px;
-    background-color: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    background-color: #000;
 
     >h2 {
         font-size: 24px;
@@ -52,6 +52,15 @@
         >.connect-klip-button {
             background-color: rgb(254, 229, 0);
             color           : #000000;
+        }
+
+        >.connect-metamask-button {
+            >img {
+                height: 24px;
+            }
+
+            background-color: #2490f8;
+            color           : #161616;
         }
 
         >.cancel-button {
