--- a/docs/style/view/dividend.less
+++ b/docs/style/view/dividend.less
@@ -62,7 +62,7 @@
                 >tr {
                     border-bottom: 1px #aaa solid;
 
-                    >th {
+                    >td {
                         padding: 16px 0px;
 
                         >a {
@@ -112,5 +112,9 @@
                 }
             }
         }
+    }
+
+    >footer {
+        margin-top: 50px;
     }
 }
