--- a/docs/style/view/home.less
+++ b/docs/style/view/home.less
@@ -32,6 +32,18 @@
                 margin-right: 16px;
             }
 
+            >.dividend-img-container {
+                display        : flex;
+                justify-content: center;
+                width          : 72px;
+                height         : 72px;
+                margin-right   : 16px;
+
+                >img {
+                    height: 72px;
+                }
+            }
+
             >.content {
                 >h2 {
                     font-family  : trajan-pro-3, serif;
