--- a/docs/bundle.css
+++ b/docs/bundle.css
@@ -1307,6 +1307,16 @@ body {
   height: 72px;
   margin-right: 16px;
 }
+.home-view > section > .card > .dividend-img-container {
+  display: flex;
+  justify-content: center;
+  width: 72px;
+  height: 72px;
+  margin-right: 16px;
+}
+.home-view > section > .card > .dividend-img-container > img {
+  height: 72px;
+}
 .home-view > section > .card > .content > h2 {
   font-family: trajan-pro-3, serif;
   color: #b19c76;
@@ -3024,5 +3034,6 @@ body {
 }
 .gaia-dividend-view > footer {
   margin-top: 50px;
+  font-size: 14px;
 }
 
