--- a/docs/style/view/buy-stable-dao.less
+++ b/docs/style/view/buy-stable-dao.less
@@ -81,6 +81,14 @@
         }
     }
 
+    >p {
+        margin-bottom: 20px;
+    }
+
+    >a {
+        color: rgba(0, 68, 90, 1);
+    }
+
     >.input-container {
         display       : flex;
         flex-direction: column;
